Fix: fix styling for text in main page, and text disappearing due to wrong color after themetoggle

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,6 +24,10 @@
   --color-accent-hover: #333333;
   --color-nav-muted-dark: #9ca3af; /* text-gray-400 */
 --color-nav-muted-light: #4b5563; /* text-gray-600 */
+--color-text-muted: var(--color-text-muted-dark);
+--color-text-muted-light: rgba(0, 0, 0, 0.7);
+
+
 
 
 
@@ -43,7 +47,8 @@
     color: var(--color-text-dark);
     color-scheme: dark;
     --color-text: var(--color-text-dark);
-    --color-nav-muted: var(--color-nav-muted-dark);
+    --color-text-muted: var(--color-text-muted-dark); /* for dark mode */
+  
     transition: background-color 0.4s ease, color 0.4s ease;
   }
 
@@ -52,6 +57,7 @@
     color: var(--color-text-light);
     color-scheme: light;
     --color-text: var(--color-text-light);
+    --color-text-muted: rgba(0, 0, 0, 0.8); /* for light mode */
     --color-nav-muted: var(--color-nav-muted-light);
     transition: background-color 0.4s ease, color 0.4s ease;
   }
